fix: missing border color for btn-white

--- a/bin/css/components/buttons.css
+++ b/bin/css/components/buttons.css
@@ -565,6 +565,7 @@ button.qui-button.btn-white:active,
 .btn-white:active {
     background: var(--qui-btn-white-bg--hover);
     color: var(--qui-btn-white-color--hover);
+    border-color: var(--qui-btn-white-borderColor--hover);
     outline: none;
 }
 
